tests/EtaX/EtaX.methF0/EtaX.methF0.2.13-new.check
// exitCode: 0   val t1a: () => Any = methF0                // ok, eta-expansion
// exitCode: 0   val t1b: () => Any = { val t = methF0; t } // `()`-insert b/c no expected type
target/tests/EtaX/EtaX.methF0/EtaX.methF0/EtaX.methF0.01.scala:7: warning: Auto-application to `()` is deprecated. Supply the empty argument list `()` explicitly to invoke method methF0,
or remove the empty argument list from its definition (Java-defined methods are exempt).
In Scala 3, an unapplied method like this will be eta-expanded into a function.
  val t1b: () => Any = { val t = methF0; t } // `()`-insert b/c no expected type
                                 ^
1 warning
// exitCode: 0   val t1c: () => Any = methF0 _              // ok, explicit eta-expansion requested
// exitCode: 0   val t1d: Any       = methF0 _              // ok, explicit eta-expansion requested
// exitCode: 1   val t1e: Any       = methF0() _            // error: _ must follow method
target/tests/EtaX/EtaX.methF0/EtaX.methF0/EtaX.methF0.04.scala:10: error: _ must follow method; cannot follow () => String
  val t1e: Any       = methF0() _            // error: _ must follow method
                             ^
1 error
